--- a/bzn-exemplo-services-profiles/pom.xml
+++ b/bzn-exemplo-services-profiles/pom.xml
@@ -3,68 +3,54 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>br.brazona</groupId>
+		<artifactId>bzn-exemplo-services</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>br.brazona</groupId>
-	<artifactId>bzn-exemplo-services</artifactId>
+	<artifactId>bzn-exemplo-services-profiles</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>bzn-exemplo-services</name>
-	<description>Aplicação exemplo de serviços / microsserviços</description>
-	<packaging>pom</packaging>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
-	<properties>
-		<java.version>24</java.version>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<spring-cloud.version>2024.0.1</spring-cloud.version>
-	</properties>
+	<name>bzn-exemplo-services-profiles</name>
+	<description>Aplicação exemplo de serviços / microsserviços Roles</description>
+	
 	<dependencies>
 
-		<!-- BIBLIOTECAS SPRING FRAMEWORD -->
-
+		<!-- CONEXAO COM O BANCO DE DADOS -->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+	<!--COPY/PASTE-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
-
-		<!-- OPENAPI - SWAGGER -->
-
 		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.5</version>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
 		</dependency>
-	
+
 	</dependencies>
-	<modules>
-		<module>bzn-exemplo-services-users</module>
-		<module>bzn-exemplo-services-roles</module>
-		<module>bzn-exemplo-services-profiles</module>
-	</modules>
-
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -105,4 +91,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
