--- a/bzn-exemplo-services-profiles/pom.xml
+++ b/bzn-exemplo-services-profiles/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -12,11 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bzn-exemplo-services-profiles</name>
 	<description>Aplicação exemplo de serviços / microsserviços Roles</description>
-	
+
 	<dependencies>
 
 		<!-- CONEXAO COM O BANCO DE DADOS -->
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -27,7 +28,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-	<!--COPY/PASTE-->
+		<!--COPY/PASTE-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -50,6 +51,22 @@
 			<artifactId>caffeine</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+
+		<!-- Bean Validation API support -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.openapitools</groupId>
+			<artifactId>jackson-databind-nullable</artifactId>
+			<version>0.2.6</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -89,30 +106,40 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			
 			<plugin>
-			    <groupId>org.openapitools</groupId>
-			    <artifactId>openapi-generator-maven-plugin</artifactId>
-			    <version>6.2.1</version>
-			    <executions>
-			        <execution>
-			            <goals>
-			                <goal>generate</goal>
-			            </goals>
-			            <configuration>
-			                <skipValidateSpec>true</skipValidateSpec>
-			                <inputSpec>./src/main/resources/openapi.yaml</inputSpec>
-			                <generatorName>spring</generatorName>
-			                <configOptions>
-			                    <openApiNullable>false</openApiNullable>
-			                    <interfaceOnly>true</interfaceOnly>
-			                </configOptions>
-			            </configuration>
-			        </execution>
-			    </executions>
+				<groupId>org.openapitools</groupId>
+				<artifactId>openapi-generator-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>
+								${project.basedir}/src/main/resources/openapi.yaml</inputSpec>
+							<generatorName>spring</generatorName>
+							<skipIfSpecIsUnchanged>true</skipIfSpecIsUnchanged>
+							<configOptions>
+								<validateSpec>false</validateSpec>
+								<interfaceOnly>true</interfaceOnly>
+								<dateLibrary>java24</dateLibrary>
+								<delegatePattern>false</delegatePattern>
+								<useTags>true</useTags>
+								<requestMappingMode>api_interface</requestMappingMode>
+								<generateClientAsBean>true</generateClientAsBean>
+								<useSpringBoot3>true></useSpringBoot3>
+								<useJakartaEe>true</useJakartaEe>
+								<apiPackage>
+									br.brazona.bzn_exemplo_services_profiles.api.v1</apiPackage>
+								<modelPackage>
+									br.brazona.bzn_exemplo_services_profiles.model.v1</modelPackage>
+							</configOptions>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
-		
+
 	</build>
 
 </project>
