--- a/bzn-exemplo-services-users/pom.xml
+++ b/bzn-exemplo-services-users/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -12,11 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bzn-exemplo-services-users</name>
 	<description>Aplicação exemplo de serviços / microsserviços A</description>
-	
+
 	<dependencies>
 
 		<!-- CONEXAO COM O BANCO DE DADOS -->
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -27,7 +28,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-	<!--COPY/PASTE-->
+		<!--COPY/PASTE-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -54,6 +55,12 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.36</version>
 			<scope>provided</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>1.5.0</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
