--- a/bzn-exemplo-services-profiles/pom.xml
+++ b/bzn-exemplo-services-profiles/pom.xml
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>br.brazona</groupId>
-		<artifactId>bzn-exemplo-services</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.4.5</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.brazona</groupId>
 	<artifactId>bzn-exemplo-services-profiles</artifactId>
@@ -14,8 +14,48 @@
 	<name>bzn-exemplo-services-profiles</name>
 	<description>Aplicação exemplo de serviços / microsserviços Roles</description>
 
+	<url />
+	<licenses>
+		<license />
+	</licenses>
+	<developers>
+		<developer />
+	</developers>
+	<scm>
+		<connection />
+		<developerConnection />
+		<tag />
+		<url />
+	</scm>
+	<properties>
+		<java.version>24</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<spring-cloud.version>2024.0.1</spring-cloud.version>
+	</properties>
 	<dependencies>
+		<!-- BIBLIOTECAS SPRING FRAMEWORK -->
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
+		<!-- OPENAPI - SWAGGER -->
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 		<!-- CONEXAO COM O BANCO DE DADOS -->
 
 		<dependency>
@@ -50,22 +90,17 @@
 			<groupId>com.github.ben-manes.caffeine</groupId>
 			<artifactId>caffeine</artifactId>
 		</dependency>
-
 		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
-			<version>2.8.8</version>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.36</version>
+			<scope>provided</scope>
 		</dependency>
-
-		<!-- Bean Validation API support -->
+		<!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.openapitools</groupId>
-			<artifactId>jackson-databind-nullable</artifactId>
-			<version>0.2.6</version>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>1.5.0</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
@@ -106,40 +141,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.openapitools</groupId>
-				<artifactId>openapi-generator-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-							<inputSpec>
-								${project.basedir}/src/main/resources/openapi.yaml</inputSpec>
-							<generatorName>spring</generatorName>
-							<skipIfSpecIsUnchanged>true</skipIfSpecIsUnchanged>
-							<configOptions>
-								<validateSpec>false</validateSpec>
-								<interfaceOnly>true</interfaceOnly>
-								<dateLibrary>java24</dateLibrary>
-								<delegatePattern>false</delegatePattern>
-								<useTags>true</useTags>
-								<requestMappingMode>api_interface</requestMappingMode>
-								<generateClientAsBean>true</generateClientAsBean>
-								<useSpringBoot3>true></useSpringBoot3>
-								<useJakartaEe>true</useJakartaEe>
-								<apiPackage>
-									br.brazona.bzn_exemplo_services_profiles.api.v1</apiPackage>
-								<modelPackage>
-									br.brazona.bzn_exemplo_services_profiles.model.v1</modelPackage>
-							</configOptions>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
-
 	</build>
 
 </project>
