--- a/bzn-exemplo-services-profiles/pom.xml
+++ b/bzn-exemplo-services-profiles/pom.xml
@@ -102,6 +102,10 @@
 			<artifactId>swagger-annotations</artifactId>
 			<version>1.5.0</version>
 		</dependency>
+		<dependency>
+	        <groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
