--- a/bzn-exemplo-services-roles/pom.xml
+++ b/bzn-exemplo-services-roles/pom.xml
@@ -58,14 +58,19 @@
 		</dependency>
 		<!-- CONEXAO COM O BANCO DE DADOS -->
 
+		<dependency>		
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+    		<groupId>javax.xml.bind</groupId>
+    		<artifactId>jaxb-api</artifactId>
+    		<version>2.3.0</version>
 		</dependency>
 
 		<!--COPY/PASTE-->
